# PDEXAPI

./: .gitignore  README.md  conn_test.py  dummy_clima.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  release.yml
pdexapi/: PDExAPI_Client.py  __init__.py
tests/: conn_test.py
